# skillvet

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
demos/: run_all.py
demos/benign-skill/: SKILL.md  skill.py
demos/exfiltration-skill/: SKILL.md  skill.py
demos/malicious-skill/: SKILL.md  package.json  skill.py
demos/mcp-server-skill/: SKILL.md  mcp.json  server.py
demos/overbroad-manifest-skill/: SKILL.md  skill.py
demos/policies/: allow-network.json  strict-no-exec.json
demos/rugpull/v1-benign/: SKILL.md  skill.py
demos/rugpull/v2-malicious/: SKILL.md  skill.py
docs/: ARCHITECTURE.md  POLICY.md  RUG-PULL.md  SARIF.md  how-it-works.md
schema/: baseline.schema.json  policy.schema.json
skillvet/: __init__.py  analyzer.py  baseline.py  cli.py  manifest.py  policy.py  sarif.py
tests/: corpus.py  test_baseline.py  test_corpus.py  test_demos.py  test_manifest.py  test_policy.py  test_sarif.py  test_schema_and_cli.py  test_skillvet.py
